--- a/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
+++ b/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
@@ -20,41 +20,12 @@
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="">
+            <NavLink class="nav-link" href="MenuRegistros">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Consultas
             </NavLink>
         </li>
 
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ConsultaUsuarios">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Usuarios
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ConsultaProductos">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Productos
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ConsultaProveedores">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta proveedores
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ConsultaCompras">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Compras
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ConsultaVentas">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Ventas
-            </NavLink>
-        </li>
-        <li class="nav-item px-3">
-            <NavLink class="nav-link" href="ConsultaPagos">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Consulta Pagos
-            </NavLink>
-        </li>
+      
 
     </ul>
     </div>
