Arreglando algo del menú de Registros

--- a/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
+++ b/ProyectoFinal-Aplicada2/Menu/MenuRegistros.razor
@@ -36,7 +36,7 @@
         <div class="card">
             <div class="card-body">
                 <h5 class="card-title">Registro de Compras</h5>
-                <p class="card-text">Registro para agregar, modificar y eliminar Comprara.</p>
+                <p class="card-text">Registro para agregar, modificar y eliminar Compras.</p>
                 <a href="Compras/0" class="btn btn-primary btn-lg btn-block">Entrar</a>
             </div>
         </div>
