--- a/ProyectoFinal-Aplicada2/Pages/ConsultaProductos.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaProductos.razor
@@ -22,102 +22,103 @@
     </AuthorizeView>
 </CascadingAuthenticationState>
 
-
-<h3>Consulta de Productos</h3>
-
-<div class="form-row">
-
-    <div class="col">
-        <input id="desde_date" class="form-control" type="datetime-local" @bind="desdeFecha" />
-        <label for="desde_date">Desde</label>
-    </div>
-    <div class="col">
-        <input id="hasta_date" class="form-control" type="datetime-local" @bind="hastaFecha" />
-        <label for="hasta_date">Hasta</label>
-    </div>
-
-    <div class="col">
-        <button class="btn btn-primary" id="filtar_buton" @onclick="filtradoPorFecha">Filtar por Fecha</button>
-    </div>
-
-    <div class="col">
-        <button class="btn btn-dark" type="button" @onclick="Saltar">Pag. Siguiente</button>
-    </div>
-
-    <div class="col">
-        <input type="text" class="form-control" placeholder="Criterio" @onfocusin="Filtrar" @onfocusout="Filtrar" @onclick="Filtrar" @bind="Criterio" />
-    </div>
-
-    <div class="col">
-        <select class="form-control" @onclick="Filtrar" @bind="filtro">
-            <option value="0">Todos</option>
-            <option value="1">Id</option>
-            <option value="2">Nombre</option>
-            <option value="3">Cantidad</option>
-            <option value="4">Precio de compra</option>
-            <option value="5">Porcentaje de ganancia</option>
-            <option value="6">Precio de venta</option>
-        </select>
-    </div>
-</div>
-<br />
-
-@if (Lista == null)
+@if (AuthenticationStateProvider.GetAuthenticationStateAsync().Result.User.Identity.IsAuthenticated)
 {
-    <p>No hay datos que mostrar</p>
-    return;
-}
-else
-{
-    <table class="table">
-        <thead class="thead-dark">
-            <tr>
-                <th>Id</th>
-                <th>Nombre</th>
-                <th>Cantidad</th>
-                <th>Fecha de entrada</th>
-                <th>Precio de compra</th>
-                <th>Porcentaje de ganancia</th>
-                <th>Precio de venta</th>
-                <th></th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var item in Lista)
-            {
+    <h3>Consulta de Productos</h3>
+
+    <div class="form-row">
+
+        <div class="col">
+            <input id="desde_date" class="form-control" type="datetime-local" @bind="desdeFecha" />
+            <label for="desde_date">Desde</label>
+        </div>
+        <div class="col">
+            <input id="hasta_date" class="form-control" type="datetime-local" @bind="hastaFecha" />
+            <label for="hasta_date">Hasta</label>
+        </div>
+
+        <div class="col">
+            <button class="btn btn-primary" id="filtar_buton" @onclick="filtradoPorFecha">Filtar por Fecha</button>
+        </div>
+
+        <div class="col">
+            <button class="btn btn-dark" type="button" @onclick="Saltar">Pag. Siguiente</button>
+        </div>
+
+        <div class="col">
+            <input type="text" class="form-control" placeholder="Criterio" @onfocusin="Filtrar" @onfocusout="Filtrar" @onclick="Filtrar" @bind="Criterio" />
+        </div>
+
+        <div class="col">
+            <select class="form-control" @onclick="Filtrar" @bind="filtro">
+                <option value="0">Todos</option>
+                <option value="1">Id</option>
+                <option value="2">Nombre</option>
+                <option value="3">Cantidad</option>
+                <option value="4">Precio de compra</option>
+                <option value="5">Porcentaje de ganancia</option>
+                <option value="6">Precio de venta</option>
+            </select>
+        </div>
+    </div>
+    <br />
+
+    @if (Lista == null)
+    {
+        <p>No hay datos que mostrar</p>
+        return;
+    }
+    else
+    {
+        <table class="table">
+            <thead class="thead-dark">
                 <tr>
-                    <td>@item.ProductoId</td>
-                    <td>@item.Nombre</td>
-                    <td>@item.Cantidad</td>
-                    <td>@item.FechaEntrada.ToString("dd/MM/yyyy")</td>
-                    <td>@item.PrecioCompra</td>
-                    <td>@item.PorcentajeGanancias</td>
-                    <td>@item.PrecioVentas</td>
-                    <td><a class="btn btn-outline-info" href="Productos/@item.ProductoId">Ver</a></td>
+                    <th>Id</th>
+                    <th>Nombre</th>
+                    <th>Cantidad</th>
+                    <th>Fecha de entrada</th>
+                    <th>Precio de compra</th>
+                    <th>Porcentaje de ganancia</th>
+                    <th>Precio de venta</th>
+                    <th></th>
                 </tr>
+            </thead>
+            <tbody>
+                @foreach (var item in Lista)
+                {
+                    <tr>
+                        <td>@item.ProductoId</td>
+                        <td>@item.Nombre</td>
+                        <td>@item.Cantidad</td>
+                        <td>@item.FechaEntrada.ToString("dd/MM/yyyy")</td>
+                        <td>@item.PrecioCompra</td>
+                        <td>@item.PorcentajeGanancias</td>
+                        <td>@item.PrecioVentas</td>
+                        <td><a class="btn btn-outline-info" href="Productos/@item.ProductoId">Ver</a></td>
+                    </tr>
+                }
+            </tbody>
+        </table>
+    }
+
+    <nav aria-label="...">
+        <ul class="pagination pagination-lg">
+            @for (int i = 1; i <= totaldepaginas; i++)
+            {
+                <li class="page-item"><a class="page-link" @onclick="OnInitialized" href="ConsultaProductos/@i">@i</a></li>
             }
-        </tbody>
-    </table>
+
+        </ul>
+    </nav>
+
 }
 
-<nav aria-label="...">
-    <ul class="pagination pagination-lg">
-        @for (int i = 1; i <= totaldepaginas; i++)
-        {
-            <li class="page-item"><a class="page-link" @onclick="OnInitialized" href="ConsultaProductos/@i">@i</a></li>
-        }
-
-    </ul>
-</nav>
+    @code {
+        List<Productos> Lista = new List<Productos>();
 
 
 
-@code {
-    List<Productos> Lista = new List<Productos>();
-
-
-
-    [Parameter]
+[Parameter]
     public int I { get; set; }
 
     double conteo = 0;
@@ -268,4 +269,4 @@ else
     }
 
 
-}
+    }
