--- a/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
@@ -12,7 +12,7 @@
                 </div>
                 <div class="card-body">
                     <h5 class="card-title">Atención</h5>
-                    <p class="card-text">Usted no esta autorizado para acceder a esta pagina.</p>
+                    <p class="card-text">Usted no está autorizado para acceder a esta pagina.</p>
                     <a href="MenuRegistros" class="btn btn-primary">Ir al Menú</a>
                 </div>
                 <div class="card-footer text-muted">
