--- a/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
+++ b/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
@@ -20,7 +20,7 @@
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="MenuRegistros">
+            <NavLink class="nav-link" href="MenuConsultas">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Consultas
             </NavLink>
         </li>
