--- a/ProyectoFinal-Aplicada2/Pages/Index.razor
+++ b/ProyectoFinal-Aplicada2/Pages/Index.razor
@@ -1,9 +1,10 @@
 ﻿@page "/"
-
+<h1>COOASAR PROJECT</h1>
+<h4>Sistema de compra y ventas.</h4>
 <div class="container">
-    <h1>Lindon y Huma</h1>
-    <h4>Sistema de compra y ventas.</h4>
+    <br />
     <img src="/Imagenes/FondoCooasar.png" class="img-fluid" alt="No Se Pudo Cargar" />
-
+    <br />
+    <br />
 </div>
 
