--- a/ProyectoFinal-Aplicada2/Pages/ConsultaProductos.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaProductos.razor
@@ -13,7 +13,7 @@
                 <div class="card-body">
                     <h5 class="card-title">Atención</h5>
                     <p class="card-text">Usted no está autorizado para acceder a esta pagina.</p>
-                    <a href="MenuRegistros" class="btn btn-primary">Ir al Menú</a>
+                    <a href="MenuConsultas" class="btn btn-primary">Ir al Menú</a>
                 </div>
                 <div class="card-footer text-muted">
                 </div>
