--- a/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
+++ b/ProyectoFinal-Aplicada2/Shared/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿
 <div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">ProyectoFinal-Aplicada2</a>
+    <a class="navbar-brand" href="">COOASAR</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -20,7 +20,7 @@
         </li>
 
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="MenuRegistros">
+            <NavLink class="nav-link" href="MenuConsultas">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Consultas
             </NavLink>
         </li>
