--- a/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
+++ b/ProyectoFinal-Aplicada2/Pages/ConsultaCompras.razor
@@ -51,7 +51,7 @@
             <select class="form-control" @onclick="Filtrar" @bind="filtro">
                 <option value="0">Todos</option>
                 <option value="1">Id</option>
-                <option value="2">ProveedorId</option>
+                <option value="2">Nombre del proveedor</option>
                 <option value="3">Itbis</option>
                 <option value="4">Balance</option>
                 <option value="5">Descripción</option>
